@@ -167,7 +167,7 @@ class AuthorizeNetTest < Test::Unit::TestCase
     @gateway.expects(:ssl_post).returns(fraud_review_response)
     
     response = @gateway.purchase(100, @credit_card)
-    assert_equal CreditCard.mask(@credit_card.number), response.card_data['number']
+    assert_equal CreditCard.last_digits(@credit_card.number), response.card_data['number']
   end
 
   private
