@@ -65,7 +65,7 @@ class CardStreamTest < Test::Unit::TestCase
     @gateway.expects(:ssl_post).returns(successful_purchase_response)
     
     response = @gateway.purchase(@amount, @credit_card, @options)
-    assert_equal CreditCard.mask(@credit_card.number), response.card_data['number']
+    assert_equal CreditCard.last_digits(@credit_card.number), response.card_data['number']
   end
   
   def test_supported_countries
