@@ -64,7 +64,7 @@ class PayJunctionTest < Test::Unit::TestCase
     @gateway.expects(:ssl_post).returns(successful_authorization_response)
     
     response = @gateway.purchase(100, @credit_card)
-    assert_equal CreditCard.mask(@credit_card.number), response.card_data['number']
+    assert_equal CreditCard.last_digits(@credit_card.number), response.card_data['number']
   end
   
   private
