@@ -62,7 +62,7 @@ class TrustCommerceTest < Test::Unit::TestCase
     @gateway.expects(:ssl_post).returns(successful_purchase_response)
     
     response = @gateway.purchase(@amount, @credit_card)
-    assert_equal CreditCard.mask(@credit_card.number), response.card_data['number']
+    assert_equal CreditCard.last_digits(@credit_card.number), response.card_data['number']
   end
   
   def test_supported_countries
