@@ -29,7 +29,7 @@ class ResponseTest < Test::Unit::TestCase
   def test_card_data
     response = Response.new(true, 'message', {}, :card_number => '5105105105105100')
     assert_equal 'master', response.card_data['type']
-    assert_equal 'XXXX-XXXX-XXXX-5100', response.card_data['number']
+    assert_equal CreditCard.last_digits('5105105105105100'), response.card_data['number']
   end
   
   def test_empty_card_data
